Added section about the interpretations of the results

--- a/inspecting_grg_detectron.ipynb
+++ b/inspecting_grg_detectron.ipynb
@@ -691,6 +691,22 @@
     "print(f\"\\nAll results saved to: {OUTPUT_DIR}\")\n",
     "print(\"=\"*80)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5dc6bd0",
+   "metadata": {},
+   "source": [
+    "# Interpretation of Results\n",
+    "\n",
+    "Segmentation: Recall > Precision which means that we catch most relevant GRG components but sometimes we include extra ones. Struggles with clean boundary likely because the dataset is not clean enough. Note: I also noticed that the model sometimes predicts components that I would also say are part of the GRG but were not annotated in the ground truth due to the imperfect nature of the dataset.\n",
+    "\n",
+    "BBoxes: Very high recall which means that i rarely misses the correct GRG components. Precision is lower (still high though) which means that sometimes it exlcudes some relevant components. It assigns boxes in a more conservative way (maybe missing GRGs that take up a large area in the cutout).\n",
+    "\n",
+    "Segmentation: Accuracy is low (~50%) due to the fact that there are many components in the ground truth that are a very small emmision island in the cutout, and the model struggles to segment those small components accurately.\n",
+    "\n",
+    "BBoxes: Accuracy is higher (~80%) because the model is better at identifying the general area of the GRG components, even if it struggles with the precise segmentation. \n"
+   ]
   }
  ],
  "metadata": {
